Correção de componentes de teste, inclusão de checkstyle, PMD e spotless